--- a/todo
+++ b/todo
@@ -59,9 +59,7 @@ AI responds to the user: "I've stored your note."
 
 Need to:
 
-Fix font, fix spacing 
-
-Then implement button functionality. New chat creates a new key that all chats under this key get stored in an array based on coordinate
+Implement button functionality. New chat creates a new key that all chats under this key get stored in an array based on coordinate
 
 Old chat button lets you input a key and brings up all chat blocks within the array of coordinates back to this chat. (also need to make sure ai gets context again)
 
